--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 		<div class="lboard_tabs">
 			<div class="tabs">
 				<ul>
-					<li data-li="today">Leaderboard</li>
-					<li class="active" data-li="month">Hints</li>
+					<li data-li="lb">Leaderboard</li>
+					<li class="active" data-li="hs">Hints</li>
 				</ul>
 			</div>
 		</div>
 
 		<div class="lboard_wrap">
-			<div class="lboard_item today" style="display: none;">
+			<div class="lboard_item lb" style="display: none;">
 				<div class="lboard_mem">
 					<div class="name_bar">
 						<p><span>1.</span>Nothing Yet</p>
@@ -76,7 +76,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="lboard_item month" style="display: block;">
+			<div class="lboard_item hs" style="display: block;">
 				<div class="lboard_mem">
 					<div class="name_bar">
 						<p><span>Level 1:</span> Nothing Yet</p>
