--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<div class="lboard_tabs">
 			<div class="tabs">
 				<ul>
-					<li data-li="lb">Leaderboard</li>
-					<li class="active" data-li="hs">Hints</li>
+					<li class="active" data-li="lb">Leaderboard</li>
+					<li data-li="hs">Hints</li>
 				</ul>
 			</div>
 		</div>
