--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</div>
 
 		<div class="lboard_wrap">
-			<div class="lboard_item lb" style="display: none;">
+			<div class="lboard_item lb" style="display: block;">
 				<div class="lboard_mem">
 					<div class="name_bar">
 						<p><span>1.</span>Nothing Yet</p>
