--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="lboard_item hs" style="display: block;">
+			<div class="lboard_item hs" style="display: none;">
 				<div class="lboard_mem">
 					<div class="name_bar">
 						<p><span>Level 1:</span> Nothing Yet</p>
